makko/default/privatebin/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: privatebin
  labels:
    app: privatebin
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: privatebin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      containers:
      - image: privatebin/nginx-fpm-alpine:2.0.6
        name: privatebin
        volumeMounts:
        - name: config
          mountPath: /srv/cfg/conf.php
          subPath: conf.php
        - name: data
          mountPath: /srv/data
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 50m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: privatebin-config
          readOnly: false
      - name: data
        persistentVolumeClaim:
          claimName: privatebin-data
          readOnly: false
